# Business-Valuation-Tool

./: .env.example  .gitignore  CLAUDE.md  NEXT_SESSION_PROMPT.md  README.md  SPEC_phase3_calibration.md  _ssl_fix.py  app.py  backtest_calibration_audit.md  cli.py  orchestrator.py  prompt.txt  pyproject.toml  requirements-lock.txt  valuation_runner.py
.claude/: settings.local.json
.claude-octopus/: state.json
.claude/rules/: scheduler.md
.claude/scripts/: split_gotchas.py
.claude/skills/db/: SKILL.md
.github/workflows/: ci.yml  weekly-discovery.yml
ai/: analyst.py  llm_client.py  prompts.py  validators.py
backtest/: __init__.py  buckets.py  dataset.py  metrics.py  models.py  price_tracker.py  report.py
bond-yield-analysis/: README.md  bond_yield_analysis.ipynb  requirements.txt
calibration/: __init__.py  __main__.py  driver_shrinkage.py  grid.py  report.py  tuner.py  walk_forward.py
calibration/tests/: test_grid.py  test_report.py  test_tuner.py
db/: __init__.py  backtest_repository.py  client.py  migrations.sql  migrations_backtest.sql  repository.py  storage.py
debates/phase3-calibration/: context.md  synthesis.md
discovery/: cjk_aliases.py  discovery_engine.py  news_collector.py
engine/: __init__.py  dcf.py  ddm.py  distress.py  drivers.py  gap_diagnostics.py  growth.py  holding_discount.py  market_comparison.py  method_selector.py  monte_carlo.py  multiples.py  nav.py  peer_analysis.py  quality.py  reverse_rnpv.py  rim.py  rnpv.py  scenario.py  scenario_validator.py  sensitivity.py  sotp.py  units.py  wacc.py
output/: console_report.py  excel_builder.py  excel_styles.py
output/sheets/: __init__.py  _ctx.py  assumptions.py  dashboard.py  financials.py  peers.py  rnpv.py  scenarios.py  sensitivity.py  valuation.py
pipeline/: api_guard.py  dart_client.py  dart_parser.py  data_fetcher.py  dna_verifier.py  edgar_client.py  edgar_parser.py  macro_data.py  market_data.py  market_signals.py  peer_fetcher.py  profile_generator.py  sentiment.py  yahoo_finance.py  yfinance_fetcher.py
profiles/: 000270.yaml  000660.yaml  003550.yaml  005380.yaml  005880.yaml  005930.yaml  012450.yaml  035420.yaml  051910.yaml  066570.yaml  346010.yaml  _template.yaml  aapl.yaml  amzn.yaml  cvx.yaml  gm.yaml  googl.yaml  jnj.yaml  kb_financial.yaml  kb_financial_rim.yaml  mrk.yaml  msft.yaml  multiples_test.yaml  nav_test.yaml  nvda.yaml  nvo.yaml  nvo_sotp.yaml  pfe.yaml  sk_ecoplant.yaml  stla.yaml  tsla.yaml
scheduler/: __main__.py  delivery.py  email_sender.py  naver_poster.py  run_weekly.bat  scoring.py  setup_task.ps1  video_creator.py  weekly_run.py  wp_poster.py  youtube_uploader.py
schemas/: models.py
scripts/: seed_synthetic_calibration.py  setup_youtube_auth.py
test_output/: _weekly_summary_dummy.json  wp_preview.html
tests/: cross_validate_fixes.py  test_ai.py  test_api_guard.py  test_backtest.py  test_backtest_repository.py  test_discovery_filter.py  test_driver_shrinkage.py  test_engine.py  test_market_from_ticker.py  test_market_signals.py  test_output.py  test_pipeline.py  test_pipeline_integration.py  test_quality.py  test_scenario_validator.py  test_scheduler.py  test_top_news_for_company.py  test_tuner.py  test_validators.py  test_walk_forward.py
(+29 files in other folders)
