[project]
name = "korean-valuation-tool"
version = "0.1.0"
description = "AI-assisted Korean corporate valuation platform — SOTP, DCF, scenario analysis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
ai = ["anthropic>=0.30", "openai>=1.0"]
pipeline = ["httpx>=0.27", "beautifulsoup4>=4.12"]
ui = ["streamlit>=1.30", "plotly>=5.18"]
db = ["supabase>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
valuation = "cli:main"
