[project]
name = "business-valuation-tool"
version = "0.1.0"
description = "AI-assisted Korean corporate valuation platform — SOTP, DCF, scenario analysis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3",
    "pyyaml>=6.0,<7",
    "pandas>=2.0,<3",
    "numpy>=1.24,<3",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
ai = ["anthropic>=0.30,<1", "openai>=1.0,<2"]
pipeline = ["httpx>=0.27,<1", "beautifulsoup4>=4.12,<5", "yfinance>=0.2.30,<1", "defusedxml>=0.7,<1"]
ui = ["streamlit>=1.30,<2", "plotly>=5.18,<6"]
db = ["supabase>=2.0,<3"]
publish = [
    "edge-tts>=7.0,<8",
    "moviepy>=2.0,<3",
    "markdown>=3.5,<4",
    "google-api-python-client>=2.100,<3",
    "google-auth-oauthlib>=1.2,<2",
    "selenium>=4.20,<5",
]
dev = ["pytest>=8.0,<9", "ruff>=0.4,<1"]

[tool.setuptools]
packages = ["engine", "schemas", "pipeline", "ai", "db", "output", "discovery", "scheduler"]
py-modules = ["cli", "orchestrator", "valuation_runner"]

[project.scripts]
valuation = "cli:main"
