[project]
name = "business-valuation-tool"
version = "0.1.0"
description = "AI-assisted Korean corporate valuation platform — SOTP, DCF, scenario analysis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3",
    "pyyaml>=6.0,<7",
    "pandas>=2.0,<3",
    "numpy>=1.24,<3",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
ai = ["anthropic>=0.30,<1", "openai>=1.0,<2"]
pipeline = ["httpx>=0.27,<1", "beautifulsoup4>=4.12,<5", "yfinance>=0.2.30,<1", "defusedxml>=0.7,<1", "portalocker>=2.0,<4"]
ui = ["streamlit>=1.37,<2", "plotly>=5.18,<6"]
db = ["supabase>=2.0,<3"]
publish = [
    "edge-tts>=7.0,<8",
    "moviepy>=2.0,<3",
    "markdown>=3.5,<4",
    "google-api-python-client>=2.100,<3",
    "google-auth-oauthlib>=1.2,<2",
    "selenium>=4.20,<5",
]
sentiment = ["transformers>=4.40,<5", "torch>=2.0,<3"]
dev = ["pytest>=8.0,<10", "ruff>=0.4,<1"]

[tool.setuptools]
packages = ["engine", "schemas", "pipeline", "ai", "db", "output", "discovery", "scheduler"]
py-modules = ["cli", "orchestrator", "valuation_runner"]

[project.scripts]
valuation = "cli:main"

[tool.ruff]
exclude = [".claude"]

[tool.ruff.lint]
# E402: conditional imports after sys.stderr/logging setup are intentional (cli.py, valuation_runner.py)
# E702: semicolon-separated statements in Excel output sheets are intentional compact style
ignore = ["E402", "E702"]

[tool.ruff.lint.per-file-ignores]
# E731: lambda-as-def is acceptable in notebook analysis cells
"bond-yield-analysis/*.ipynb" = ["E731"]
